# rE2EE

./: .gitignore  README.md
.claude/: settings.json
analisa/: performance.csv
e2ee_sim/: Cargo.toml
e2ee_sim/results/: ablation.csv  ablation_security.csv  e2ee_analysis.ipynb  performance.csv  performance_all.csv  security_tests.csv
e2ee_sim/src/: main.rs
e2ee_sim/src/ablation/: study.rs
e2ee_sim/src/benchmark/: metrics.rs
e2ee_sim/src/crypto/: decrypt.rs  encrypt.rs  kdf.rs  keygen.rs  mod.rs
e2ee_sim/src/output/: csv.rs
e2ee_sim/src/security/: scenarios.rs
