[package]
name = "e2ee_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
aes-gcm-siv = "0.11"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
hex = "0.4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
cpu-time = "1.0"
stats_alloc = "0.1"